fix spinner alignment
- always centered

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -79,10 +79,10 @@ main {
     animation: fade-out-top 1s forwards 2s;
     .spinner {
         position: absolute;
-        top: 50%;
-        left: 50%;
         width: 70px;
         height: 70px;
+        margin: auto;
+        inset: 0;
         border: 4px solid #eaeaea;
         border-top: 4px solid $color_2;
         border-radius: 50%;
